samples/_failures_safe/1761520768_2cff78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52ae6538.c: In function ‘main’:
./samples/SAFE/__tmp_52ae6538.c:141:9: error: expected declaration or statement at end of input
  141 |         print_buffer(decompressed, decompressed_size);
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_52ae6538.c:141:9: error: expected declaration or statement at end of input
